--- a/.classpath
+++ b/.classpath
@@ -10,13 +10,13 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="jars/gson-2.8.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-10.2.5.beta1/voltdb/voltdb-10.2.5.beta1.jar"/>
-	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-10.2.5.beta1/voltdb/voltdbclient-10.2.5.beta1.jar"/>
-	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-10.2.5.beta1/lib/kafka-avro-serializer-3.0.0.jar"/>
-	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-10.2.5.beta1/lib/kafka-clients-2.3.1.jar"/>
-	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-10.2.5.beta1/lib/kafka-schema-registry-client-5.3.2.jar"/>
 	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-10.2.5.beta1/lib/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-10.2.5.beta1/lib/slf4j-api-1.6.2.jar"/>
 	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-10.2.5.beta1/lib/slf4j-log4j12-1.6.2.jar"/>
+	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-11.2/lib/kafka-avro-serializer-3.0.0.jar"/>
+	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-11.2/lib/kafka-clients-2.3.1.jar"/>
+	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-11.2/lib/kafka-schema-registry-client-5.3.2.jar"/>
+	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-11.2/voltdb/voltdb-11.2.jar"/>
+	<classpathentry kind="lib" path="/Users/drolfe/Desktop/InstallsOfVolt/voltdb-ent-11.2/voltdb/voltdbclient-11.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
